--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -45,7 +45,7 @@
               <div class="col-md-8">
                 <div class="card-body ms-3">
                   <h4 class="card-title"><%= item.nombre %></h4>
-                  <p class="card-text"><%= item.nombre %> </p>
+                  <p class="card-text"><%= item.descripcion %> </p>
                     <a  class="card-link" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                       Ver más...
                     </a>
